A lot of changes for framework

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -1,5 +1,6 @@
 <Alloy>
 	<Window id="win" theme="Theme.NoActionBar" title="Home" navBarHidden="true" fullscreen="false">
+	<WebView zIndex="100" url="/html/socket.html" id="socket" class="wfill" height="0"></WebView>
     <View class='wsize wfill vert' top="40">
     	<ImageView image="/images/logo.png" width="50%"/>
     	<Button class="button" onClick="navToDemo">New Page to Demo</Button> 
